# failing-gracefully

./: .gitmodules  LICENSE  README.md
code/: Main.hs  MainEitherT.hs  failing-gracefully.cabal
slides/: failing-gracefully.html
